# MedVoice-FastAPI

./: .dockerignore  .env-file.txt  .env-placeholder.txt  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.toml  docker-compose.yml  docker_init.sh  empty-audios.sh  index.html  ngrok.example.yml  nrgok.yml-placeholder.txt  nrgok.yml.example  nrgok.yml.txt  prize.json  pull-llm.sh  pyproject.toml  requirements-to-poetry.py  requirements.txt  upload_to_bucket.py  wait-for-it.sh
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
app/: main.py  worker.py
app/LLMs/: rag.py
app/api/v1/: api_v1_router.py
app/api/v1/endpoints/: nurse.py  patient.py
app/api/v1/endpoints/get/: gcloud_storage.py
app/api/v1/endpoints/post/: llm.py
app/config/: google_project_config.py
app/core/: app_config.py  db_config.py  google_project_config.py
app/crud/: crud_embedding.py  crud_nurse.py  crud_patient.py
app/db/: init_db.py  session.py
app/llm/: llm_helpers.py  picovoice_models.py  rag.py  replicate_models.py
app/models/: embedding.py  models.py  nurse.py  patient.py  picovoice_models.py  rag.py  replicate_models.py  request_models.py
app/routes/: models.py  test.py
app/routes/GET/: audio_and_transcript.py
app/routes/POST/: llm_endpoints.py  models.py
app/schemas/: embedding.py  llm_prompt.py  nurse.py  patient.py
app/utils/: bucket_helpers.py  crud_file.py  file_helpers.py  file_manipulation.py  filename_helpers.py  google_storage.py  json_helpers.py  json_to_sql.py  passwd_helpers.py  pretty_print_json.py  replicate_models.py  save_audio.py  save_file.py
assets/: falcon-output.txt  patients.json
docker/: docker-compose.gpu.yml
docker/db/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docker/ollama/: Dockerfile  health_check.sh  pull-llm.sh
docs/: how-to-setup-gcp-service-account.md
ollama/: Dockerfile
scripts/: install.sh  install_nvidia_toolkit.sh
static/js/: api.js  auth.js  crud.js  get_audios.js  llm-pipeline.js  modal.js  process_audio.js  process_audio_v2.js  rag-system.js  table.js  upload.js
utils/: deploy_img_to_cloud.sh  empty_audios.py  empty_dir.py  ollama_init.py  picovoice_falcon_demo.py
