[tool.poetry]
name = "MedVoice-FastAPI"
version = "0.1.0"
description = ""
authors = ["dolelongan <dolelongan@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.6.0"
anyio = "4.3.0"
botocore = "1.34.91"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
fastapi = "0.110.2"
google-api-core = "2.18.0"
google-auth = "2.29.0"
google-cloud-core = "2.4.1"
google-cloud-storage = "2.16.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.7.0"
googleapis-common-protos = "1.63.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
jmespath = "1.0.1"
packaging = "<24.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pygments = "2.17.2"
python-dateutil = "2.9.0.post0"
replicate = "0.25.2"
requests = "2.31.0"
rsa = "4.9"
s3transfer = "0.10.1"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.37.2"
typing-extensions = "4.11.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
poethepoet = "^0.25.1"
python-multipart = "^0.0.9"
poetry-plugin-export = "^1.7.1"
jinja2 = "^3.1.3"
nest-asyncio = "^1.6.0"
pyngrok = "^7.1.6"
python-dotenv = "^1.0.1"
langchain = "^0.2.2"
langchain-community = "^0.2.3"
langchain-core = "^0.2.4"
pypdf = "^4.2.0"
chromadb = "^0.5.3"
langchain-text-splitters = "^0.2.1"
langchainhub = "^0.1.20"
jq = "^1.7.0"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
aiofiles = "^24.1.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"

[tool.poe.tasks]
run = "uvicorn 'app.main:app' --host=0.0.0.0 --port=8000 --loop asyncio"
compose = "docker-compose up --build --scale worker=1"
export = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
import = "python3 utils/requirements_to_poetry.py"
flush = "python3 utils/empty_dir.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
