[tool.poetry]
name = "MedVoice-FastAPI"
version = "0.1.0"
description = ""
authors = ["dolelongan <dolelongan@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
anyio = "4.7.0"
botocore = "1.35.86"
cachetools = "5.5.0"
certifi = "2024.12.14"
charset-normalizer = "3.4.0"
click = "8.1.8"
fastapi = "0.115.2"
google-api-core = "2.21.0"
google-auth = "2.37.0"
google-cloud-core = "2.4.1"
google-cloud-storage = "2.18.1"
google-crc32c = "1.6.0"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.66.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
jmespath = "1.0.1"
packaging = "<24.0"
proto-plus = "1.25.0"
protobuf = "4.25.5"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
replicate = "0.34.2"
requests = "2.32.3"
rsa = "4.9"
s3transfer = "0.10.4"
six = "1.17.0"
sniffio = "1.3.1"
starlette = "0.40.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.34.0"
poethepoet = "^0.31.1"
python-multipart = "^0.0.20"
poetry-plugin-export = "^1.7.1"
jinja2 = "^3.1.3"
nest-asyncio = "^1.6.0"
pyngrok = "^7.1.6"
python-dotenv = "^1.0.1"
langchain = "^0.2.2"
langchain-community = "^0.2.3"
langchain-core = "^0.2.4"
pypdf = "^4.2.0"
chromadb = "^0.5.3"
langchain-text-splitters = "^0.2.1"
langchainhub = "^0.1.20"
jq = "^1.7.0"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
aiofiles = "^24.1.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.4.0"
pgvector = "^0.3.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poe.tasks]
run = "uvicorn 'app.main:app' --host=0.0.0.0 --port=8000 --loop asyncio"
compose = "docker-compose up --build --scale worker=1"
compose2 = "docker compose up --build --scale worker=1"
export = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
import = "python3 scripts/requirements_to_pyproject.py"
flush = "python3 scripts/empty_dir.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
